Added ability to sign up new admin, if signing up  from admin account.

--- a/css/style.css
+++ b/css/style.css
@@ -52,9 +52,9 @@ div#authNeeded {
     margin-top: 3px;
 }
 
-.btn-block {
+/*.btn-block {
     margin-bottom: 10px;
-}
+}*/
 
 .help-inline {
     color: #1E8ACF;
